--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script>
+        var i = "hello";
+        console.log(i);
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>Keegan Jordan</h1>
+    <h2>Keegan Jordan</h2>
     <img src="IMG_8302.JPG" alt="" width="100%">
     
 </body>
