--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script>
-        var i = "hello";
-        console.log(i);
-    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -14,4 +11,5 @@
     <img src="IMG_8302.JPG" alt="" width="100%">
     
 </body>
+<script src="script.js"></script>
 </html>
