Projects page & nav bar commit

--- a/projects.html
+++ b/projects.html
@@ -16,16 +16,15 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-              <a class="nav-link" href="./projects.html">Projects</a>
+              <a class="nav-link" href="./index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="./projects.html">Projects</a>
               <a class="nav-link disabled" aria-disabled="true">Disabled</a>
             </div>
           </div>
         </div>
       </nav>
 
-    <h1>Keegan Jordan</h1>
-    <img src="IMG_8302.JPG" alt="" width="100%">
+    <h1>Projects</h1>
     
 </body>
 <script src="script.js"></script>
