--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Keegan Jordan</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
@@ -24,8 +24,12 @@
         </div>
       </nav>
 
-    <h1>Keegan Jordan</h1>
     <img src="IMG_8302.JPG" alt="" width="100%">
+    <div class="video-container">
+        <p id="title">Title</p>
+        <p id="video">Video</p>
+        <p id="info">Info</p>
+    </div>
     
 </body>
 <script src="script.js"></script>
