--- a/index.html
+++ b/index.html
@@ -10,26 +10,50 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Keegan Jordan</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-              <a class="nav-link" href="./projects.html">Projects</a>
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            <a class="navbar-brand" href="#">Keegan Jordan</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                    <a class="nav-link" href="./projects.html">Projects</a>
+                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                </div>
             </div>
-          </div>
         </div>
-      </nav>
+    </nav>
 
-    <img src="IMG_8302.JPG" alt="" width="100%">
-    <div class="video-container">
-        <p id="title">Title</p>
-        <p id="video">Video</p>
-        <p id="info">Info</p>
+    <img src="IMG_8302.JPG" alt="" width="100%" class="landing-img">
+
+    <div class="bio-container">
+        <div class="bio-title">
+            <p>Bio</p>
+        </div>
+        <div class="bio-text">
+            <p>My name is Keegan Jordan.  I am a driven and focused professional 
+                pursuing a career in Software Engineering.  I am currently pursuing 
+                a BS in Computer Science at Colorado State University, as well as a 
+                Professional Certificate in Coding with MIT xPro, a full stack 
+                development certificate through the Massachusetts Institute of 
+                Technology.  My education and experience has taught me industry 
+                standards within web development to create and maintain web pages, 
+                as well as business standards that are applicable to the software 
+                industry.  I am proficient in Java, JavaScript, HTML, CSS and 
+                Python, and I continue to expand my knowledge in software 
+                development every day. 
+            </p>
+        </div>
     </div>
+
+    <div class="video-container">
+        <div class="video">
+            <p id="title">Title</p>
+            <p id="video">Video</p>
+            <p id="info">Info</p>
+        </div>
+    </div>
+    
     
 </body>
 <script src="script.js"></script>
