--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,20 @@
     </nav>
 
     <h1>Projects</h1>
+
+    <div class="footer-container">
+        <div class="copyright">
+            <p class="footer-text">© 2023 Keegan Jordan</p>
+        </div>
+        <div class="socials">
+            <p class="footer-text">GitHub</p>
+            <p class="footer-text">Linkedin</p>
+            <p class="footer-text">Facebook</p>
+            <!--GitHub-->
+            <!--Linkedin-->
+            <!--Facebook-->
+        </div>
+    </div>
     
 </body>
 <script src="script.js"></script>
