--- a/index.html
+++ b/index.html
@@ -54,6 +54,19 @@
         </div>
     </div>
     
+    <div class="footer-container">
+        <div class="copyright">
+            <p class="footer-text">© 2023 Keegan Jordan</p>
+        </div>
+        <div class="socials">
+            <p class="footer-text">GitHub</p>
+            <p class="footer-text">Linkedin</p>
+            <p class="footer-text">Facebook</p>
+            <!--GitHub-->
+            <!--Linkedin-->
+            <!--Facebook-->
+        </div>
+    </div>
     
 </body>
 <script src="script.js"></script>
