Footer & video fix

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
         <div class="bio-title">
             <p>Bio</p>
         </div>
-        <div class="bio-text">
-            <p>My name is Keegan Jordan.  I am a driven and focused professional 
+            <p class="bio-text">My name is Keegan Jordan.  I am a driven and focused professional 
                 pursuing a career in Software Engineering.  I am currently pursuing 
                 a BS in Computer Science at Colorado State University, as well as a 
                 Professional Certificate in Coding with MIT xPro, a full stack 
@@ -43,32 +42,19 @@
                 Python, and I continue to expand my knowledge in software 
                 development every day. 
             </p>
-        </div>
     </div>
 
     <div class="video-container">
         <div class="video">
-            <p id="title">Title</p>
-            <p id="video">Video</p>
-            <p id="info">Info</p>
+            <iframe id="youtube-video"
+                src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
+            </iframe>
         </div>
     </div>
     
-    <div class="footer-container">
-        <div class="copyright">
-            <p class="footer-text">© 2023 Keegan Jordan</p>
-        </div>
-        <div class="socials">
-            <p class="footer-text">GitHub</p>
-            <p class="footer-text">Linkedin</p>
-            <p class="footer-text">Facebook</p>
-            <!--GitHub-->
-            <!--Linkedin-->
-            <!--Facebook-->
-        </div>
-    </div>
+    <div class="footer-container"></div>
     
 </body>
-<script src="script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="script.js"></script>
 </html>
