Explore button commit

--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
         <div class="bio-title">
             <p>Bio</p>
         </div>
-            <p class="bio-text">My name is Keegan Jordan.  I am a driven and focused professional 
-                pursuing a career in Software Engineering.  I am currently pursuing 
-                a BS in Computer Science at Colorado State University, as well as a 
-                Professional Certificate in Coding with MIT xPro, a full stack 
-                development certificate through the Massachusetts Institute of 
-                Technology.  My education and experience has taught me industry 
-                standards within web development to create and maintain web pages, 
-                as well as business standards that are applicable to the software 
-                industry.  I am proficient in Java, JavaScript, HTML, CSS and 
-                Python, and I continue to expand my knowledge in software 
-                development every day. 
-            </p>
+        <p class="bio-text">My name is Keegan Jordan.  I am a driven and focused professional 
+            pursuing a career in Software Engineering.  I am currently pursuing 
+            a BS in Computer Science at Colorado State University, as well as a 
+            Professional Certificate in Coding with MIT xPro, a full stack 
+            development certificate through the Massachusetts Institute of 
+            Technology.  My education and experience has taught me industry 
+            standards within web development to create and maintain web pages, 
+            as well as business standards that are applicable to the software 
+            industry.  I am proficient in Java, JavaScript, HTML, CSS and 
+            Python, and I continue to expand my knowledge in software 
+            development every day. 
+        </p>
     </div>
 
     <div class="video-container">
@@ -50,6 +50,9 @@
                 src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
             </iframe>
         </div>
+        <div class="explore-button-container">
+            <a href="./projects.html" class="explore-button">Explore projects</a>
+        </div>
     </div>
     
     <div class="footer-container"></div>
@@ -57,4 +60,5 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script src="script.js"></script>
+<script>addFooter();</script>
 </html>
