--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -51,7 +52,8 @@
             </iframe>
         </div>
         <div class="explore-button-container">
-            <a href="./projects.html" class="explore-button">Explore projects</a>
+            <a href="./projects.html" class="explore-button">Explore projects<i class="bi bi-arrow-right" id="explore-button-arrow" ></i></a>
+            
         </div>
     </div>
     
