--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -24,11 +25,18 @@
         </div>
     </nav>
 
-    <h1>Projects</h1>
+    <div class="project-cards-container">
+        <div class="project-cards-sub-container"></div>
+    </div>
 
     <div class="footer-container"></div>
     
 </body>
-<script src="script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="script.js"></script>
+<script>
+    addCard('Real Time Bus Tracker', 'readMeImgBus.jpeg', 'A live bus tracker that displays the current location of all the busses in Boston', undefined);
+    addCard('PackMen Exercise', 'readMeImgPacMen.jpeg', 'A PackMan generator that adds a PackMan to the web page.', undefined);
+    addCard('Eyes Exercise', 'readMeImgEyes.jpeg', 'A pair of eyes that track and follow your mouse around the screen with their gaze.', undefined);
+</script>
 </html>
