--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,10 @@
         <div class="project-cards-sub-container"></div>
     </div>
 
+    <div class="list-container">
+
+    </div>
+
     <div class="footer-container"></div>
     
 </body>
