All cards commit

--- a/projects.html
+++ b/projects.html
@@ -26,12 +26,15 @@
     </nav>
 
     <div class="project-cards-container">
+        <p class="project-title">Projects</p>
+        <div class="feature-project-cards-sub-container"></div>
+    </div>
+
+    <div>
+        <p class="list-container-title">All</p>
         <div class="project-cards-sub-container"></div>
     </div>
-
-    <div class="list-container">
-
-    </div>
+    
 
     <div class="footer-container"></div>
     
@@ -39,8 +42,13 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script src="script.js"></script>
 <script>
-    addCard('Real Time Bus Tracker', 'readMeImgBus.jpeg', 'A live bus tracker that displays the current location of all the busses in Boston', undefined);
-    addCard('PackMen Exercise', 'readMeImgPacMen.jpeg', 'A PackMan generator that adds a PackMan to the web page.', undefined);
-    addCard('Eyes Exercise', 'readMeImgEyes.jpeg', 'A pair of eyes that track and follow your mouse around the screen with their gaze.', undefined);
+    addCard('feature-project-cards-sub-container', 'Real Time Bus Tracker', 'readMeImgBus.jpeg', 'A live bus tracker that displays the current location of all the busses in Boston', undefined);
+    addCard('feature-project-cards-sub-container', 'PackMen Exercise', 'readMeImgPacMen.jpeg', 'A PackMan generator that adds a PackMan to the web page.', undefined);
+    addCard('feature-project-cards-sub-container', 'Eyes Exercise', 'readMeImgEyes.jpeg', 'A pair of eyes that track and follow your mouse around the screen with their gaze.', undefined);
+
+    addCard('project-cards-sub-container', 'Real Time Bus Tracker', 'readMeImgBus.jpeg', 'A live bus tracker that displays the current location of all the busses in Boston', undefined);
+    addCard('project-cards-sub-container', 'PackMen Exercise', 'readMeImgPacMen.jpeg', 'A PackMan generator that adds a PackMan to the web page.', undefined);
+    addCard('project-cards-sub-container', 'Eyes Exercise', 'readMeImgEyes.jpeg', 'A pair of eyes that track and follow your mouse around the screen with their gaze.', undefined);
+
 </script>
 </html>
