Landing image text commit

--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
         </div>
     </nav>
 
-    <img src="IMG_8302.JPG" alt="" width="100%" class="landing-img">
+    <div>
+        <img src="IMG_8302.JPG" alt="" width="100%" class="landing-img">
+        <div class="landing-img-title">
+            <p class="landing-img-title-name">Keegan Jordan</p>
+            <p class="landing-img-title-info">Software Developer</p>
+        </div>
+    </div>
+    
 
     <div class="bio-container">
         <div class="bio-title">
