--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Keegan Jordan</a>
+            <a class="navbar-brand" href="./index.html">Keegan Jordan</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -25,14 +25,11 @@
         </div>
     </nav>
 
-    <div>
-        <img src="IMG_8302.JPG" alt="" width="100%" class="landing-img">
-        <div class="landing-img-title">
-            <p class="landing-img-title-name">Keegan Jordan</p>
-            <p class="landing-img-title-info">Software Developer</p>
-        </div>
+    <img src="IMG_8302.JPG" alt="" width="100%" class="landing-img">
+    <div class="landing-img-title">
+        <p class="landing-img-title-name">Keegan Jordan</p>
+        <p class="landing-img-title-info">Software Engineer</p>
     </div>
-    
 
     <div class="bio-container">
         <div class="bio-title">
