--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Keegan Jordan</a>
+            <a class="navbar-brand" href="./index.html">Keegan Jordan</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -25,7 +25,7 @@
         </div>
     </nav>
 
-    <div class="project-cards-container">
+    <div class="feature-project-cards-container">
         <p class="project-title">Projects</p>
         <div class="feature-project-cards-sub-container"></div>
     </div>
