Project addition, version post

--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,6 @@
                 <div class="navbar-nav">
                     <a class="nav-link" href="./index.html">Home</a>
                     <a class="nav-link active" aria-current="page" href="./projects.html">Projects</a>
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                 </div>
             </div>
         </div>
@@ -27,6 +26,7 @@
 
     <div class="feature-project-cards-container">
         <p class="project-title">Projects</p>
+        <p class="list-container-title">Featured</p>
         <div class="feature-project-cards-sub-container"></div>
     </div>
 
@@ -49,6 +49,7 @@
     addCard('project-cards-sub-container', 'Real Time Bus Tracker', 'readMeImgBus.jpeg', 'A live bus tracker that displays the current location of all the busses in Boston', 'https://krjordan02.github.io/Real-Time-Bus-Tracker/');
     addCard('project-cards-sub-container', 'PackMen Exercise', 'readMeImgPacMen.jpeg', 'A PackMan generator that adds a PackMan to the web page.', 'https://krjordan02.github.io/PacMen-Exercise/');
     addCard('project-cards-sub-container', 'Eyes Exercise', 'readMeImgEyes.jpeg', 'A pair of eyes that track and follow your mouse around the screen with their gaze.', 'https://krjordan02.github.io/Eye-Exercise/');
+    addCard('project-cards-sub-container', 'Bouncing Ball', 'readMeImgBall.jpeg', 'A ball that bounces around your screen, taking walls into consideration.', 'https://krjordan02.github.io/Bouncing-Ball/');
 
     addFooter();
 </script>
