Bio link commit, footer update

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
             Python, and I continue to expand my knowledge in software 
             development every day. 
         </p>
+        <div class="bio-link-container">
+            <a href="mailto: keeganrjordan@gmail.com" class="bio-text-link"><i class="bi bi-envelope-at-fill"></i> keeganrjordan@gmail.com</a>
+            <a href="https://github.com/krjordan02" class="bio-text-link"><i class="bi bi-github"></i> krjordan02</a>
+            <a href="https://www.linkedin.com/in/keeganjordan02/" class="bio-text-link"><i class="bi bi-linkedin"></i> keeganjordan02</a>
+        </div>
     </div>
 
     <div class="video-container">
@@ -61,7 +66,7 @@
     
     <div class="footer-container"></div>
 
-    <p>v.001.001</p>
+    <p>v.001.002</p>
 
     
 </body>
