--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
         <div class="video">
             <iframe id="youtube-video"
-                src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
+                src="https://www.youtube.com/embed/EVaXgoWb_bk?si=p6FQCLt22QuBAFxZ">
             </iframe>
         </div>
         <div class="explore-button-container">
