media folder commit

--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
     </nav>
 
     <div class="landing-img-container">
-        <img src="IMG_8302.JPG" alt="" width="100%" class="landing-img">
+        <img src="media/IMG_8302.JPG" alt="" width="100%" class="landing-img">
         <div class="landing-img-title">
             <p class="landing-img-title-name">Keegan Jordan</p>
             <p class="landing-img-title-info">Software Engineer</p>
         </div>
     </div>
     
-
     <div class="bio-container">
         <div class="bio-title">
             <p>Bio</p>
